users-client: structuring  bootstarp

--- a/apps/users-client/src/index.html
+++ b/apps/users-client/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <food-stories-root></food-stories-root>
+   <fs-root></fs-root>
   </body>
 </html>
