--- a/apps/users-client/src/index.html
+++ b/apps/users-client/src/index.html
@@ -5,12 +5,14 @@
     <title>users-client</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
   </head>
-  <body>
+  <body class="mat-typography" >
    <fs-root></fs-root>
   </body>
 </html>
